--- a/package.json
+++ b/package.json
@@ -29,17 +29,18 @@
     "build:production": "npm run build",
     "build:edge": "npm run build",
     "build:firefox": "npm run build",
-    "test": "vitest --run",
+    "test": "vitest --run --reporter=basic",
     "test:watch": "vitest",
-    "test:coverage": "vitest --coverage --run",
+    "test:coverage": "vitest --coverage --run --reporter=basic",
     "test:ui": "vitest --ui",
-    "test:integration": "vitest --run tests/integration/",
+    "test:integration": "vitest --run tests/integration/ --reporter=basic",
     "test:integration:watch": "vitest tests/integration/",
-    "test:unit": "vitest --run tests/ --exclude tests/integration/ --exclude tests/compatibility/ --exclude tests/user-acceptance/",
-    "test:compatibility": "vitest --run tests/compatibility/",
+    "test:unit": "vitest --run tests/ --exclude tests/integration/ --exclude tests/compatibility/ --exclude tests/user-acceptance/ --reporter=basic",
+    "test:compatibility": "vitest --run tests/compatibility/ --reporter=basic",
     "test:compatibility:watch": "vitest tests/compatibility/",
-    "test:user-acceptance": "vitest --run tests/user-acceptance/",
-    "test:all": "vitest --run",
+    "test:user-acceptance": "vitest --run tests/user-acceptance/ --reporter=basic",
+    "test:all": "vitest --run --reporter=basic",
+    "test:quick": "vitest --run tests/lib/ tests/background/ --reporter=basic",
     "lint": "echo 'Linting code...' && echo 'ESLint not configured yet'",
     "lint:fix": "npm run lint",
     "format": "echo 'Formatting code...' && echo 'Prettier not configured yet'",
